# manipulation_pipeline

./: README.md
.github/workflows/: industrial_ci.yml
manipulation_pipeline/: CMakeLists.txt  Doxyfile  README.md  package.xml
manipulation_pipeline/doc/: conf.py  index.rst
manipulation_pipeline/include/manipulation_pipeline/: action.h  collision_object_manager.h  execution_pipeline.h  goal_handle.h  ik_sampler.h  manipulation_pipeline.h  planner.h  planning_context.h  planning_interface.h  planning_pipeline.h  planning_step.h  robot_model.h  robot_model_monitor.h  visualization_interface.h  worker_thread.h
manipulation_pipeline/include/manipulation_pipeline/actions/: change_attached_object.h  dwell.h  execute_trajectory.h
manipulation_pipeline/include/manipulation_pipeline/planning_steps/: actuate_tool.h  execute_path.h  grasp.h  manipulation_planning_step.h  move_to_configuration.h  move_to_named_pose.h  move_to_pose.h  place.h
manipulation_pipeline/src/: action.cpp  collision_object_manager.cpp  execution_pipeline.cpp  goal_handle.cpp  ik_sampler.cpp  manipulation_pipeline.cpp  planner.cpp  planning_context.cpp  planning_interface.cpp  planning_pipeline.cpp  planning_step.cpp  robot_model.cpp  robot_model_monitor.cpp  visualization_interface.cpp  worker_thread.cpp
manipulation_pipeline/src/actions/: change_attached_object.cpp  dwell.cpp  execute_trajectory.cpp
manipulation_pipeline/src/planning_steps/: actuate_tool.cpp  execute_path.cpp  grasp.cpp  manipulation_planning_step.cpp  move_to_configuration.cpp  move_to_named_pose.cpp  move_to_pose.cpp  place.cpp
manipulation_pipeline_interfaces/: CMakeLists.txt  README.md  package.xml
manipulation_pipeline_interfaces/action/: ActuateTool.action  ExecutePath.action  Grasp.action  MoveToConfiguration.action  MoveToNamedPose.action  MoveToPose.action  Place.action
manipulation_pipeline_interfaces/msg/: CartesianLimits.msg  CollisionPair.msg  LinearMotion.msg  MotionParameters.msg  ObjectComponent.msg  Progress.msg  State.msg  ToolCommand.msg
manipulation_pipeline_interfaces/srv/: CombineObjects.srv  RemoveObject.srv  RemoveObjects.srv  SpawnObject.srv  SplitObject.srv
manipulation_pipeline_tests/: CMakeLists.txt  package.xml
manipulation_pipeline_tests/config/: single_ur.srdf
manipulation_pipeline_tests/config/single_ur/: controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_cpp.yaml  pilz_cartesian_limits.yaml
manipulation_pipeline_tests/launch/: single_ur.launch.py
manipulation_pipeline_tests/test/: conftest.py  mapi_client.py  test_single_ur.py
manipulation_pipeline_tests/urdf/: single_ur.urdf.xacro  ur_simple.urdf.xacro
