<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulation_pipeline</name>
  <version>0.0.0</version>
  <description>Generic MoveIt-based motion and manipulation interface</description>

  <maintainer email="wilbrandt@fzi.de">Robert Wilbrandt</maintainer>

  <license>BSD-3-Clause</license>

  <author>Robert Wilbrandt</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fmt</depend>
  <depend>geometric_shapes</depend>
  <depend>manipulation_pipeline_interfaces</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pilz_industrial_motion_planner</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>shape_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
